<resources>
    <string name="app_name">JohnTour</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_pause_audio">Pause Audio on minimize</string>
    <string name="pref_description_pause_audio">If unchecked, audio will continue playing in the background.</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_description_notifications">Show notifications on arriving at location</string>
    <string name="pref_title_photo_opt_out">Photo Opt-Out</string>
    <string name="pref_description_photo_opt_out">Skip prompt to take photo at eack location</string>
    <string name="pref_title_debug_pass">Debug Password</string>

    <string-array name="pref_list_language">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_media">John A Macdonald</string>
    <string name="title_location">Where to next?</string>
    <string name="title_activity_logos">John A MacDonald Walking Tour</string>

    <string name="hello_world">Hello world!</string>
    <string name="headphones">Headphones Recommended</string>
    <string name="play_btn">Play</string>
    <string name="restart_button">Restart</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_gallery_detail">GalleryDetailActivity</string>
    <string name="loc1Title" >John A Statue</string>
    <string name="introTitle" />
    <string name="loc2Title" />
    <string name="loc3Title" />
    <string name="loc4Title" />
    <string name="loc5Title" />
    <string name="loc6Title" />
    <string name="loc7Title" />
    <string name="loc8Title" />
    <string name="loc9Title" />
    <string name="title_activity_main" />
    <string name="LocNativeRelationsTitle" />
    <string name="locNativeRelationsTitle" />
    <string name="action_update_picture">Update Picture</string>
    <string name="action_show_on_map">Show on Map</string>
</resources>
